--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 <h2>Movie Genre Classification</h2>
                 <p>Developed a movie genre classification system utilizing natural language processing and machine learning to categorize movies based on their plot summaries.</p>
             </div>
+            <div  class="project-card">
+                <h2>Chatbot</h2>
+                <p>Designed a Chatbot for hospital to streamline patient inquiries and appointment scheduling. The chatbot efficiently handled patient queries, provided information on services.</p>
+            </div>
         </div>
     </section>
 
